ok, parece que logramos hacer andar varias cosas, la imagen de otra pagina, y las imagenes en static. Ahora vamos con la parte funcional

--- a/appinfo/templates/about.html
+++ b/appinfo/templates/about.html
@@ -2,6 +2,39 @@
 
 {% block variable1 %}
 
-    <h1>nepe</h1>
-            
+    <h1>acerca de...</h1>
+    <p>Hola!!! mi nombre es Felipe Torres, y si estas aca es por que me estas calificando el proyecto, por lo que te pregunto, de verdad me pensas desaprobar, y hacer llorar al perrito?<br>
+        dale profe... vas a hacer llorar al perrito???? enserio????
+    </p>
+    <!-- aqui estoy practicando como traer un objeto (html tiene objetos???) de otra web-->
+    <img src="https://media.tenor.com/hWcktasokXsAAAAM/puppy-corner.gif" alt="enserio profe??? al perrito????">
+    <br><br>
+    <p>mentira!!! soy un estudiante de python enfocado en desarollo web, en la plataforma CoderHouse.
+        <br><br>
+        Oriundo de colombia, trabaje desde muy chico en la cocina que es mi otra pasion, y despues de muchas aventuras, llegue a ser jefe de cocina en un lindo restaurante en una de las zonas mas lindas de Buenos Aires. Sin embargo, la pandemia me dejo desempleado y sin posibilidad de reincorporarme al mundo laboral.
+        <br><br>
+        Despues de sortear algunos contratiempos logre encontrar trabajo como operario de planta en una pequeña empresa de logistica, en la cual, con muuuuuucho esfuerzo y sacrificio (y una pizca de suerte), hoy me desempeño como lider del area de proyectos y procesos logicos.
+        <br>
+        Con ansias de continuar creciendo, me empece a involucrar en el area de IT de la empresa, logrando realizar macros en Excel con VBA para aliviar la carga y posibilidad de error humano en algunas tareas del area administrativa, y tableros de control en PBI con DAX, paar el analisis del area gerencial.
+        <br><br>
+        Actualmente tercerizamos nuestros sistemas de gestion y seguimiento, Y AQUI ES DONDE ENTRA EL PROYECTO!!!
+        <br><br>
+        Este proyecto pretende ser el (humilde) inicio de lo que se espera algun dia llegue a ser un sistema personalizado de gestion de ordenes como lo indican sus siglas OMS (Order Management System) en ingles, pero completamente personalizado y adaptado a las necesidades de mi actual empleador.
+        <br><br>
+        El proyecto se llama OMSone, y su principal funcion sera la creacion, modificacion y eliminacion de registros de seguimiento de ordenes por medio de tablas relacionales, funcionales a operaciones logisticas, acompañado de tableros de control con metricas personalizadas que te ayudaran a entender mejor el comportamiento de tu operacion, sobre todo, para la toma de decisiones que puedan beneficiar a tu modelo de negocio.
+        <br><br>
+        En OMSone podras tener tracking en tiempo real de tus ordenes en bases de datos con campos e interacciones totalmente personalizadas y modificables por medio de nuestra interfaz de usuario.
+        <br><br>
+        En OMSone podras generar usuarios jerarquizados que te permitiran tener completamente bajo control que puede ver, modificar y gestionar todo el personal relacionado con tu operacion desde tu cliente, pasando por tu area administrativa y operativa, hasta el personal jerarquico en tu empresa!!!
+        <br><br>
+        Realizamos implementaciones a medida. Todos los campos de las bases de datos son personalizados y podras obtener informacion sobre tus registros y las metricas asociadas a tu operacion actualizadas parcticamente en tiempo real, gracias a la plasticidad que ofrece nuestro sistema en cuanto a las conecciones e interacciones via API con otros sevicios.
+        <br><br>
+        (todo esto cuando este terminado por supuesto, por ahora solo lo del proyecto y una par de cosas mas XD, falta muuuuuuuuuuuuuuuuuuuuuuuucho por aprender y lograr...)
+        <br><br>
+        Sin mas que decir, agradezco el tiempo que dedicaste a esta pequeña lectura, y cualquier cosa no dudes en contactarnos a travez del formulario abajo!!!
+    <!-- Aqui estoy practicando tarer algo que deje en static, por que hay que loadear static aca.... POR QUE????-->
+    {% load static %}
+    <img src='{% static "img/excited-dog.gif" %}' alt="P-E-R-R-I-T-O">
+        
+    </p>
 {% endblock variable1 %}
