--- a/appinfo/templates/about.html
+++ b/appinfo/templates/about.html
@@ -29,12 +29,18 @@
         <br><br>
         Realizamos implementaciones a medida. Todos los campos de las bases de datos son personalizados y podras obtener informacion sobre tus registros y las metricas asociadas a tu operacion actualizadas parcticamente en tiempo real, gracias a la plasticidad que ofrece nuestro sistema en cuanto a las conecciones e interacciones via API con otros sevicios.
         <br><br>
-        (todo esto cuando este terminado por supuesto, por ahora solo lo del proyecto y una par de cosas mas XD, falta muuuuuuuuuuuuuuuuuuuuuuuucho por aprender y lograr...)
+        (todo esto cuando este terminado por supuesto, por ahora solo lo del proyecto final y una par de cosas mas XD, y ahi borro todo esto y lo hago bien profesional, falta muuuuuuuuuuuuuuuuuuuuuuuucho por aprender y lograr igual...)
         <br><br>
         Sin mas que decir, agradezco el tiempo que dedicaste a esta pequeña lectura, y cualquier cosa no dudes en contactarnos a travez del formulario abajo!!!
+        <br>
     <!-- Aqui estoy practicando tarer algo que deje en static, por que hay que loadear static aca.... POR QUE????-->
     {% load static %}
-    <img src='{% static "img/excited-dog.gif" %}' alt="P-E-R-R-I-T-O">
+    <!-- ahora tengo q hacer un div (anda saber q es un "div") para darle clase al gif para que css le de propiedades. POR QUE LA COMPLICAN TANTOOOOOO, igual no me funciono... no le doy mas bola.-->
+
+    <div class="center">
+        <img src="{% static 'img/excited-dog.gif' %}" alt="enserio profe??? al perrito????">
+    </div>
+      
         
     </p>
 {% endblock variable1 %}
