--- a/appinfo/templates/about.html
+++ b/appinfo/templates/about.html
@@ -1,21 +1,21 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 
 {% block variable1 %}
 
     <h1>acerca de...</h1>
-    <p>Hola!!! mi nombre es Felipe Torres, y si estas aca es por que me estas calificando el proyecto, por lo que te pregunto, de verdad me pensas desaprobar, y hacer llorar al perrito?<br>
+    <p>Hola!!! mi nombre es Felipe Torres, y si estas aca es por que me estas calificando el proyecto, por lo que te pregunto, de verdad considerarias el desaprobarme, y hacer llorar al perrito?<br>
         dale profe... vas a hacer llorar al perrito???? enserio????
     </p>
     <!-- aqui estoy practicando como traer un objeto (html tiene objetos???) de otra web-->
     <img src="https://media.tenor.com/hWcktasokXsAAAAM/puppy-corner.gif" alt="enserio profe??? al perrito????">
     <br><br>
-    <p>mentira!!! soy un estudiante de python enfocado en desarollo web, en la plataforma CoderHouse.
+    <p>mentira!!! soy un estudiante de python orientado al desarollo web, en la plataforma CoderHouse.
         <br><br>
-        Oriundo de colombia, trabaje desde muy chico en la cocina que es mi otra pasion, y despues de muchas aventuras, llegue a ser jefe de cocina en un lindo restaurante en una de las zonas mas lindas de Buenos Aires. Sin embargo, la pandemia me dejo desempleado y sin posibilidad de reincorporarme al mundo laboral.
+        Oriundo de colombia, trabaje desde muy chico en la cocina que es mi otra pasion y despues de muchas aventuras, llegue a ser jefe de cocina en un hermoso restaurante en una de las zonas mas lindas de Buenos Aires. Sin embargo, la pandemia me dejo desempleado y sin posibilidad de reincorporarme al mundo laboral.
         <br><br>
         Despues de sortear algunos contratiempos logre encontrar trabajo como operario de planta en una pequeña empresa de logistica, en la cual, con muuuuuucho esfuerzo y sacrificio (y una pizca de suerte), hoy me desempeño como lider del area de proyectos y procesos logicos.
         <br>
-        Con ansias de continuar creciendo, me empece a involucrar en el area de IT de la empresa, logrando realizar macros en Excel con VBA para aliviar la carga y posibilidad de error humano en algunas tareas del area administrativa, y tableros de control en PBI con DAX, paar el analisis del area gerencial.
+        Con ansias de continuar creciendo, me empece a involucrar en el area de IT de la empresa, logrando realizar macros en Excel con VBA para aliviar la carga y posibilidad de error humano en algunas tareas del area administrativa, y tableros de control en PBI con DAX, para el analisis del area gerencial.
         <br><br>
         Actualmente tercerizamos nuestros sistemas de gestion y seguimiento, Y AQUI ES DONDE ENTRA EL PROYECTO!!!
         <br><br>
@@ -35,7 +35,7 @@
         <br>
     <!-- Aqui estoy practicando tarer algo que deje en static, por que hay que loadear static aca.... POR QUE????-->
     {% load static %}
-    <!-- ahora tengo q hacer un div (anda saber q es un "div") para darle clase al gif para que css le de propiedades. POR QUE LA COMPLICAN TANTOOOOOO, igual no me funciono... no le doy mas bola.-->
+    <!-- ahora tengo q hacer un div (anda saber q es un "div") para darle clase al gif para que css le de propiedades. POR QUE LA COMPLICAN TANTOOOOOO. igual no me funciono... no le doy mas bola.-->
 
     <div class="center">
         <img src="{% static 'img/excited-dog.gif' %}" alt="enserio profe??? al perrito????">
