--- a/omsone/templates/base.html
+++ b/omsone/templates/base.html
@@ -23,9 +23,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index">Indice</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about">Acerca</a></li>
                         <li class="nav-item"><a class="nav-link scroll-link" href="#contactForm">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Services</a></li>
+                        <!-- aca esta el boton services, pero como hacermos-->
+                        <!-- <li class="nav-item"><a class="nav-link" href="#!">Services</a></li> -->
                     </ul>
                 </div>
             </div>
