ok, el listado de compañias en la consulta general esta funcionando. ahora tendria que lograr registro y delete

--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -10,6 +10,9 @@
     <li>
         <a href="{% url 'about' %}" style="color:maroon;">Acerca de nosotros</a>
     </li>
+    <li>
+        <a href="{% url 'list_companies' %}" style="color:maroon;">Listado de companias</a>
+    </li>
     
     
 </ul>
