cree la url de post de compañias pero la view esta buscando un formulario como que no correspondo, no encuentro el error

--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -13,6 +13,9 @@
     <li>
         <a href="{% url 'list_companies' %}" style="color:maroon;">Listado de companias</a>
     </li>
+    <li>
+        <a href="{% url 'post_companies' %}" style="color:maroon;">agregar compania</a>
+    </li>
     
     
 </ul>
