--- a/appinfo/templates/about.html
+++ b/appinfo/templates/about.html
@@ -3,7 +3,7 @@
 {% block variable1 %}
 
     <h1>acerca de...</h1>
-    <p>Hola!!! mi nombre es Felipe Torres, y si estas aca es por que me estas calificando el proyecto, por lo que te pregunto, de verdad considerarias el desaprobarme, y hacer llorar al perrito?<br>
+    <p>Hola!!! mi nombre es Felipe Torres y me encantan los videojuegos, y si estas aca es por que me estas calificando el proyecto, por lo que te pregunto, de verdad considerarias el desaprobarme, y hacer llorar al perrito?<br>
         dale profe... vas a hacer llorar al perrito???? enserio????
     </p>
     <!-- aqui estoy practicando como traer un objeto (html tiene objetos???) de otra web-->
@@ -36,7 +36,7 @@
     <!-- Aqui estoy practicando tarer algo que deje en static, por que hay que loadear static aca.... POR QUE????-->
     {% load static %}
     <!-- ahora tengo q hacer un div (anda saber q es un "div") para darle clase al gif para que css le de propiedades. POR QUE LA COMPLICAN TANTOOOOOO. igual no me funciono... no le doy mas bola.-->
-
+    
     <div class="center">
         <img src="{% static 'img/excited-dog.gif' %}" alt="enserio profe??? al perrito????">
     </div>
