logrado el buscador relativo de compañias por nombre, dios mio lo que costo, pero era un tema mas conceptual de propiedades de objetos HTML. moraleja, leer bien la doc de propiedades y no inventarselas

--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -16,6 +16,9 @@
     <li>
         <a href="{% url 'post_companies' %}" style="color:maroon;">agregar compania</a>
     </li>
+    <li>
+        <a href="{% url 'search_company' %}" style="color:maroon;">buscar compañia</a>
+    </li>
     
     
 </ul>
