--- a/appcompanies/templates/postcompanies.html
+++ b/appcompanies/templates/postcompanies.html
@@ -18,7 +18,7 @@
 
     {% if formulario1.errors %}
     <div class="alert alert-danger">
-    <strong>Error!</strong> Please correct the following errors:<br>
+    <strong>Error!</strong> Por favor corrige los siguientes errores:<br>
     {{ formulario1.errors }}
     </div>
     {% endif %}
