--- a/appinfo/templates/about.html
+++ b/appinfo/templates/about.html
@@ -7,8 +7,10 @@
         dale profe... vas a hacer llorar al perrito???? enserio????
     </p>
     <!-- aqui estoy practicando como traer un objeto (html tiene objetos???) de otra web-->
-    <img src="https://media.tenor.com/hWcktasokXsAAAAM/puppy-corner.gif" alt="enserio profe??? al perrito????">
-    <br><br>
+    <div class="center">
+        <img src="https://media.tenor.com/hWcktasokXsAAAAM/puppy-corner.gif" alt="enserio profe??? al perrito????">
+    </div>
+        <br><br>
     <p>mentira!!! soy un estudiante de python orientado al desarollo web, en la plataforma CoderHouse.
         <br><br>
         Oriundo de colombia, trabaje desde muy chico en la cocina que es mi otra pasion y despues de muchas aventuras, llegue a ser jefe de cocina en un hermoso restaurante en una de las zonas mas lindas de Buenos Aires. Sin embargo, la pandemia me dejo desempleado y sin posibilidad de reincorporarme al mundo laboral.
@@ -35,7 +37,7 @@
         <br>
     <!-- Aqui estoy practicando tarer algo que deje en static, por que hay que loadear static aca.... POR QUE????-->
     {% load static %}
-    <!-- ahora tengo q hacer un div (anda saber q es un "div") para darle clase al gif para que css le de propiedades. POR QUE LA COMPLICAN TANTOOOOOO. igual no me funciono... no le doy mas bola.-->
+    <!-- ahora tengo q hacer un div (anda saber q es un "div") para darle clase al gif para que css le de propiedades. POR QUE LA COMPLICAN TANTOOOOOO.-->
     
     <div class="center">
         <img src="{% static 'img/excited-dog.gif' %}" alt="enserio profe??? al perrito????">
