--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -19,6 +19,9 @@
     <li>
         <a href="{% url 'search_company' %}" style="color:maroon;">buscar compañia</a>
     </li>
+    <li>
+        <a href="{% url 'list_delete_companies' %}" style="color:maroon;">borrar compañias</a>
+    </li>
     
     
 </ul>
