--- a/appcompanies/templates/listcompanies.html
+++ b/appcompanies/templates/listcompanies.html
@@ -4,24 +4,61 @@
 {% block variable1 %}
 
     {% if instances %}
+    {% block variable1com %}
         <h2>proveedores hasta ahora</h2>
+    {% endblock variable1com %}
         <ul>
-            {% for instance in instances %}
-                <li>
-                    nombre: {{ instance.nombre }}, 
-                    rubro: {{ instance.rubro }}, 
-                    mail: {{ instance.mail }}, 
-                    tipo:
-                        {% if instance.escliente %}
-                            cliente
-                        {% else %}
-                            proveedor
-                        {% endif %}
-                </li>
-            {% endfor %}
+            <style>
+                table {
+                    border-collapse: collapse;
+                    width: 100%;
+                }
+            
+                th, td {
+                    border: 1px solid black;
+                    padding: 8px;
+                    text-align: left;
+                }
+            
+                th {
+                    background-color: #f2f2f2; /* Optional: Background color for header cells */
+                }
+            </style>
+            
+            <table>
+                <thead>
+                    <tr>
+                        <th></th> <!-- Empty header for the checkbox column -->
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Rubro</th>
+                        <th>Mail</th>
+                        <th>Tipo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for instance in instances %}
+                        <tr>
+                            <td><input type="checkbox" name="selected_instances" value="{{ instance.id }}"></td>
+                            <td>{{ instance.id }}</td>
+                            <td>{{ instance.nombre }}</td>
+                            <td>{{ instance.rubro }}</td>
+                            <td>{{ instance.mail }}</td>
+                            <td>
+                                {% if instance.escliente %}
+                                    Cliente
+                                {% else %}
+                                    Proveedor
+                                {% endif %}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            
         </ul>
     {% else %}
-        <p>No exixten proveedores cargados.</p>
+        <p>No exixten compañias cargadas cargados.</p>
     {% endif %}
 
     
