--- a/omsone/templates/base.html
+++ b/omsone/templates/base.html
@@ -22,9 +22,9 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index">Indice</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about">Acerca</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Indice</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Acerca</a></li>
                         <li class="nav-item"><a class="nav-link scroll-link" href="#contactForm">Contact</a></li>
                         <!-- aca esta el boton services, pero como hacermos-->
                         <!-- <li class="nav-item"><a class="nav-link" href="#!">Services</a></li> -->
@@ -288,8 +288,8 @@
             <div class="container px-5 my-5 px-5">
                 <div class="text-center mb-5">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
-                    <h2 class="fw-bolder">Get in touch</h2>
-                    <p class="lead mb-0">We'd love to hear from you</p>
+                    <h2 class="fw-bolder">Contactanos!!!</h2>
+                    <p class="lead mb-0">Nos encantaria recibir tu mensaje</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-6">
@@ -344,7 +344,7 @@
                             <!-- an error submitting the form-->
                             <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
                             <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
+                            <div class="d-grid"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Enviar</button></div>
                         </form>
                     </div>
                 </div>
