arreglada la vista de paginas con links y descripcion modo tabla, ahora sigamos con el update de los registros de compañia

--- a/appcompanies/templates/listcompanies.html
+++ b/appcompanies/templates/listcompanies.html
@@ -34,6 +34,7 @@
                         <th>Rubro</th>
                         <th>Mail</th>
                         <th>Tipo</th>
+                        <th>Accion</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -50,6 +51,11 @@
                                 {% else %}
                                     Proveedor
                                 {% endif %}
+                            </td>
+                            <td>
+                                <button>
+                                    <a href="{% url 'home' %}">Editar registro</a>
+                                </button>
                             </td>
                         </tr>
                     {% endfor %}
