creamos el sistema CRUD para el modelo de empleados con la funcionalidad de autoviews de clase de django y creamos tambien las urls de renderizacion de las mismas, pero faltan los html y hacerlo funcionar

--- a/appinfo/templates/about.html
+++ b/appinfo/templates/about.html
@@ -17,7 +17,7 @@
         <br><br>
         Despues de sortear algunos contratiempos logre encontrar trabajo como operario de planta en una pequeña empresa de logistica, en la cual, con muuuuuucho esfuerzo y sacrificio (y una pizca de suerte), hoy me desempeño como lider del area de proyectos y procesos logicos.
         <br>
-        Con ansias de continuar creciendo, me empece a involucrar en el area de IT de la empresa, logrando realizar macros en Excel con VBA para aliviar la carga y posibilidad de error humano en algunas tareas del area administrativa, y tableros de control en PBI con DAX, para el analisis del area gerencial.
+        Con ansias de continuar creciendo, me empece a involucrar en el area de IT de la empresa, logrando realizar macros en Excel con VBA para aliviar la carga de trabajo y posibilidad de error humano en varias tareas de todas las areas con alcance administrativo, y tableros de control en PBI con DAX, para el analisis del area gerencial.
         <br><br>
         Actualmente tercerizamos nuestros sistemas de gestion y seguimiento, Y AQUI ES DONDE ENTRA EL PROYECTO!!!
         <br><br>
