--- a/omsone/templates/404.html
+++ b/omsone/templates/404.html
@@ -9,7 +9,7 @@
         <img src="{% static 'img/notfound.jpg' %}" alt="enserio profe??? al perrito????">
     </div>
     <div class="center">
-        <p>OOOPS!!!! parece que la pagina que estas buscando no existe. puedes volver al inicio dando click <a href="{% url 'home' %}">aqui</a></p>
+        <p>OOOPS!!!! parece que la pagina que estas buscando no existe, o se encuentra en construccion. puedes volver al inicio dando click <a href="{% url 'home' %}">aqui</a></p>
     </div>
 
 {% endblock variable1 %}
