Esta funcionando el list, el create y el update de empleados. vamos por el delete y ahi ya podemos encarar la parte de login. yayyyyy

--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -74,6 +74,22 @@
                 <p>En esta pagina podras eliminar una ovarias compañias del registro</p>
             </td>
         </tr>
+        <tr>
+            <td>
+                <a href="{% url 'post_employee' %}" style="color:maroon;">Crear empleados</a>
+            </td>
+            <td>
+                <p>Aqui podras crear usuarios para los empleados de tu compañia</p>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <a href="{% url 'list_employees' %}" style="color:maroon;">Listar empleados</a>
+            </td>
+            <td>
+                <p>En esta pagina podras consultar los empleados creados para las compañias</p>
+            </td>
+        </tr>
         
     </tbody>
     </table>
