--- a/omsone/templates/base.html
+++ b/omsone/templates/base.html
@@ -93,7 +93,7 @@
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
                     <h2 class="fw-bolder">Paga segun crezcas!!!</h2>
-                    <p class="lead mb-0">Con nuestros planes personalizados con funcionalidades segun el tamaño de tu operacion</p>
+                    <p class="lead mb-0">Con nuestros planes personalizados con funcionalidades adaptados al tamaño tamaño de tu operacion</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <!-- Pricing card free-->
