ya esta el CRUD de ambas formas para ambos modelos de appcompanies, falta que updateemployeesuccess renderice el registro que actualizo no mas, mañana GPT por ahi me ayuda con la task, y empezamos con el login y terminariamos con el mensaje creo

--- a/appcompanies/templates/deletecompaniessuccess.html
+++ b/appcompanies/templates/deletecompaniessuccess.html
@@ -7,4 +7,8 @@
     <h3>Compañias remanentes</h3>
     
 {% endblock variable1com %}
-    
+{% block editvar2 %}
+<button>
+    <a href="{% url 'list_delete_companies' %}" style="align-items: center;">Eliminar mas compañias</a>
+</button>
+{% endblock editvar2 %}
