--- a/appcompanies/templates/listcompanies.html
+++ b/appcompanies/templates/listcompanies.html
@@ -77,6 +77,11 @@
             </table>
             
         </ul>
+    
+        {% block editvar2 %}
+    
+        {% endblock editvar2 %}
+        
     {% else %}
         <p>No exixten compañias cargadas cargados.</p>
     {% endif %}
