--- a/appcompanies/templates/listemployees.html
+++ b/appcompanies/templates/listemployees.html
@@ -70,6 +70,9 @@
             </table>
             
         </ul>
+        {% block editvar2 %}
+    
+        {% endblock editvar2 %}
     {% else %}
         <p>No existen empleados cargados</p>
     {% endif %}
