--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -90,6 +90,14 @@
                 <p>En esta pagina podras consultar los empleados creados para las compañias</p>
             </td>
         </tr>
+        <tr>
+            <td>
+                <a href="{% url 'list_delete_employees' %}" style="color:maroon;">Eliminar empleados</a>
+            </td>
+            <td>
+                <p>Esta pagina te permitira seleccionar y eliminar empleados creados</p>
+            </td>
+        </tr>
         
     </tbody>
     </table>
