logrado el formulario de registro de nuevos usuarios con estilo y todo

--- a/appinfo/templates/index.html
+++ b/appinfo/templates/index.html
@@ -36,6 +36,22 @@
         </tr>  
         <tr>
             <td>
+                <a href="{% url 'registration' %}" style="color: rgb(128, 0, 0);">Registrar</a>
+            <td>
+                <p>Registra nuevos usuarios</p>
+            </td>
+            </td>
+        </tr>  
+        <tr>
+            <td>
+                <a href="{% url 'login' %}" style="color: maroon;">Login</a>
+            <td>
+                <p>Logueate con tu usuario en esta pagina</p>
+            </td>
+            </td>
+        </tr>  
+        <tr>
+            <td>
                 <a href="{% url 'about' %}" style="color:maroon;">Acerca de nosotros</a>
             </td>
             <td>
@@ -98,7 +114,6 @@
                 <p>Esta pagina te permitira seleccionar y eliminar empleados creados</p>
             </td>
         </tr>
-        
     </tbody>
     </table>
 </ul>
