--- a/appregister/templates/loginsuccess.html
+++ b/appregister/templates/loginsuccess.html
@@ -3,7 +3,35 @@
 
 {% block variable1 %}
 
-{{"msg"}}
+<div>
+    {% if msg == "0" %}
+
+        <p>La autenticacion fallo, parece que los datos son incorrectos. seras redireccionado de nuevo al formulario de loguin en instantes</p>
+
+    {% else %}
+
+        <p>Bienvenido {{usr}}!!!, seras redireccionado a la pagina de inicio en instantes</p>
+        
+    {% endif %}
+</div>
+
+    {% if msg == "1" %}
+
+    <script>
+        setTimeout(function() {
+                window.location.href = "{% url 'home' %}";
+        }, 3500); // 5000 milliseconds = 5 seconds
+    </script>
     
+    {% else %}
+
+    <script>
+        setTimeout(function() {
+                window.location.href = "{% url 'login' %}";
+        }, 3500); // 5000 milliseconds = 5 seconds
+    </script>
+
+    {% endif %}
+            
 {% endblock variable1 %}
-    
+
