--- a/omsone/templates/static/css/styles.css
+++ b/omsone/templates/static/css/styles.css
@@ -10836,3 +10836,51 @@ textarea.form-control-lg {
   text-align: center;
   margin: 0 auto;
 }
+/* estos son los estilos externos que traje: */
+.registration-form-container {
+  width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.25);
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  animation: slide-in 0.5s ease-in-out;
+}
+
+.registration-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.registration-form input,
+.registration-form select {
+  margin-bottom: 15px;
+  padding: 10px;
+  border:hsl(from color h s l);
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.registration-form button {
+  background-color: #0d6efd;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.registration-form button:hover {
+  background-color: #0b5fd7;
+}
+
+@keyframes slide-in {
+  0% {
+      transform: translateX(-100%);
+  }
+  100% {
+      transform: translateX(0);
+  }
+}
