--- a/appregister/templates/loginsuccess.html
+++ b/appregister/templates/loginsuccess.html
@@ -6,11 +6,11 @@
 <div>
     {% if msg == "0" %}
 
-        <p>La autenticacion fallo, parece que los datos son incorrectos. seras redireccionado de nuevo al formulario de loguin en instantes</p>
+        <h2>La autenticacion fallo, parece que los datos son incorrectos. seras redireccionado de nuevo al formulario de loguin en instantes</h2>
 
     {% else %}
 
-        <p>Bienvenido {{usr}}!!!, seras redireccionado a la pagina de inicio en instantes</p>
+        <h2>Bienvenido {{usr}}!!!, seras redireccionado a la pagina de inicio en instantes</h2>
         
     {% endif %}
 </div>
