--- a/appregister/templates/registration.html
+++ b/appregister/templates/registration.html
@@ -1,20 +1,43 @@
 {% extends 'base.html' %}
 
 {% block variable1 %}
-<div class="registration-form-container">
-    <form class="registration-form">
+
+<div class="registration-form-container" >
+    <form action="{% url 'registration' %}" class="registration-form" id="registration-form", method="post">
+        {% csrf_token %}
         {{ instance.as_p|linebreaksbr }}
         <button type="submit">Register</button>
+        <button type="button" class="toggle-password">Show/Hide Password</button>
     </form>
 </div>
+{% endblock variable1 %}
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+    const passwordInputs = document.querySelectorAll(".password-input");
+    const toggleButton = document.querySelector(".toggle-password");
+
+    toggleButton.addEventListener("click", function() {
+        passwordInputs.forEach(function(input) {
+            if (input.type === "password") {
+                input.type = "text";
+            } else {
+                input.type = "password";
+            }
+        });
+    });
+});
+</script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const formContainer = document.getElementById("registration-form");
+        formContainer.style.animation = "slide-in 0.5s ease-in-out";
+        formContainer.scrollIntoView({ behavior: "smooth" }); // Automatically scroll to the form
+    });
+</script>
 <script>
     document.addEventListener("DOMContentLoaded", function() {
     const formContainer = document.querySelector(".registration-form-container");
     formContainer.style.animation = "slide-in 0.5s ease-in-out";
 });
 </script>
-{% endblock variable1 %}
 
-
-
-    
