--- a/omsone/templates/base.html
+++ b/omsone/templates/base.html
@@ -18,14 +18,25 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5">
-                <a class="navbar-brand" href="#!">OMSone</a>
+                <a class="navbar-brand" href="#!">OMSone</a>                    
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Indice</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Acerca</a></li>
-                        <li class="nav-item"><a class="nav-link scroll-link" href="#contactForm">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">Acerca</a></li>                           
+                        <li class="nav-item"><a class="nav-link scroll-link" href="#contactForm">Contacto</a></li>
+                        {% if user.is_authenticated %}
+
+                            <li class="nav-item"><a class="nav-link" href="#" onclick="confirmLogout()">Logout</a></li>
+                            <p style="color: cornsilk; font-size:larger; padding-top: 5px;padding-left: 5px;border: 1px solid;border-color: cornsilk;">Usuario: {{user.username}}</p>
+
+                        {% else %}
+
+                            <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+
+                        {% endif %}
+                        
                         <!-- aca esta el boton services, pero como hacermos-->
                         <!-- <li class="nav-item"><a class="nav-link" href="#!">Services</a></li> -->
                     </ul>
@@ -365,3 +376,16 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
+
+<script>
+    function confirmLogout() {
+        var confirmation = confirm("Estas seguro que quieres desloguearte?");
+        if (confirmation) {
+            // If user confirms, redirect to the logout URL
+            window.location.href = "{% url 'logout' %}";
+        } else {
+            // If user cancels, do nothing
+            // You can add additional actions here if needed
+        }
+    }
+</script>
